--- a/Project/Styles/SubCategories.css
+++ b/Project/Styles/SubCategories.css
@@ -3,19 +3,19 @@
     color: white;
 }
 
-#CategoryMenu {
+#SubCatMenu {
     width: 100%;
     height: 100%;
 }
 
-.CategoryMenuCell {
+.SubCatMenuCell {
     position: relative;
-    width: 50%;
-    padding-top: 30px;
+    width: 30%;
+    padding-top: 50px;
     padding-bottom: 40px;
 }
 
-.CategoryMenuCell a {
+.SubCatMenuCell a {
     display: table;
     height: 15vmax;
     margin: 0px auto;
@@ -23,37 +23,31 @@
     text-decoration: none;
 }
 
-.CategoryMenuCellDiv {
+.SubCatMenuCellDiv {
     display: table-cell;
-    /* width: calc(100px + 30%); */
-    width: 20vmax;
+    width: 17vmax;
     /* padding: 15% 10%; */
     background: radial-gradient(rgb(62, 105, 183), rgb(47, 93, 169));
-    /* background: radial-gradient(rgb(62, 105, 183), rgb(59, 103, 178), rgb(48, 92, 166)); */
-    /* background: radial-gradient(rgb(48, 93, 169), rgb(59,  103, 178), rgb(73, 119, 195)); */
-    /* background: radial-gradient(rgb(48, 93, 169), rgb(59,  103, 178), rgb(62, 110, 193)); */
-    /* background: radial-gradient(rgb(48, 92, 166), rgb(62, 105, 183)); */
-    /* background: radial-gradient(blue, darkblue); */
     border: 1px solid black;
     border-radius: 20%;
     text-align: center;
     vertical-align: middle;
 }
 
-.CategoryMenuCellDiv:hover {
+.SubCatMenuCellDiv:hover {
     background: radial-gradient(blue, darkblue);
 }
 
-.CategoryMenuCellDiv h1 {
+.SubCatMenuCellDiv h1 {
     font-size: 2vmax;
     font-weight: normal;
     text-shadow: 2px 2px 0px black;
 }
 
-.CategoryMenuCellDel {
+.SubCatMenuCellDel {
     position: absolute;
-    top: 10%;
-    right: 25%;
+    top: 16%;
+    right: 17%;
     width: 25px;
     background-color: red;
     border: 1px solid black;
@@ -62,6 +56,6 @@
     font-weight: bold;
 }
 
-.CategoryMenuCellDel:hover {
+.SubCatMenuCellDel:hover {
     background-color: pink;
 }
