--- a/Project/Styles/CategoryProducts.css
+++ b/Project/Styles/CategoryProducts.css
@@ -1,2 +1,94 @@
 ﻿body {
+    font-family: Arial;
+    color: white;
+}
+
+#ProdsCatMenu {
+    width: 100%;
+    height: 100%;
+}
+
+.ProdsCatMenuCell {
+    position: relative;
+    width: 20%;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 0px;
+}
+
+.ProdsCatMenuCell a {
+    display: table;
+    height: 15vmax;
+    margin: 0px auto;
+    color: white;
+    text-decoration: none;
+}
+
+.ProdsCatMenuCellDiv {
+    position: relative;
+    display: table-cell;
+    width: 20vmax;
+    background: radial-gradient(rgb(62, 105, 183), rgb(47, 93, 169));
+    border: 1px solid black;
+    border-radius: 20%;
+    text-align: center;
+    vertical-align: middle;
+}
+
+/* Hovering -> Hide image AND show text */
+.ProdsCatMenuCellDiv:hover img {
+    opacity: 0.0;
+}
+
+.ProdsCatMenuCellDiv:hover h1 {
+    opacity: 1.0;
+}
+
+.ProdsCatMenuCellDiv:hover h2 {
+    opacity: 1.0;
+}
+/* ----------------------------------- */
+
+.ProdsCatMenuCellDiv:hover {
+    background: radial-gradient(blue, darkblue);
+}
+
+.ProdsCatMenuCellDiv img {
+    width: 100%;
+    height: 100%;
+}
+
+.ProdsCatMenuCellDiv h1 {
+    position: absolute;
+    top: 30%;
+    left: 0px;
+    right: 0px;
+    opacity: 0.0; /* Hide */
+    font-size: 1.5vmax;
+}
+
+.ProdsCatMenuCellDiv h2 {
+    position: absolute;
+    top: 55%;
+    left: 0px;
+    right: 0px;
+    opacity: 0.0; /* Hide */
+    font-size: 1.5vmax;
+}
+
+.ProdsCatMenuCellDel {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 25px;
+    background-color: red;
+    border: 1px solid black;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+}
+
+.ProdsCatMenuCellDel:hover {
+    background-color: pink;
 }
