--- a/Project/Styles/Category.css
+++ b/Project/Styles/Category.css
@@ -67,11 +67,15 @@
     background-color: pink;
 }
 
-#CategoryMenuCellAdd { /* UNFINISHED */
-    position: relative;
-    width: 10vmax;
-    height: 10vmax;
+#CategoryMenuCellAdd {
+    position: absolute;
+    top: 115px;
+    width: 30px;
+    height: 30px;
     border: 1px solid black;
     border-radius: 20%;
     background-color: green;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
 }
