--- a/Project/Styles/SubCategories.css
+++ b/Project/Styles/SubCategories.css
@@ -60,3 +60,16 @@
 .SubCatMenuCellDel:hover {
     background-color: pink;
 }
+
+#CategoryMenuCellAdd {
+    position: absolute;
+    top: 115px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 20%;
+    background-color: green;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+}
