Dagens fixningar (Erik + Teo/Lich)
Fixade in Oscars texter och "huvudlogga" i About us och Contact us.
Fixade bort Community, Login, Search länkarna.
Fixade in support för Videos och Youtube länkar för News.
Fixade in fulhack som tar bort "../" från paths i Default/News sidan.
(Tog även bort Default kopian som låg i Pages/ )

--- a/Project/Styles/AboutUs.css
+++ b/Project/Styles/AboutUs.css
@@ -1,7 +1,15 @@
-﻿#MainContent h1 {
+﻿body {
+    font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, Sans-Serif;
+}
+
+#MainContent h1 {
     margin-left: 10px;
 }
 
 #MainContent p {
     margin-left: 10px;
+}
+
+#GearCommunityImg {
+    margin: 10px;
 }
