--- a/Project/Styles/TopMenu.css
+++ b/Project/Styles/TopMenu.css
@@ -1,14 +1,14 @@
 ﻿#TopMenu_Top {
-		width: 100%;
+	width: 100%;
     /* height: 100px; */
     height: 110px;
-		background-color: rgb(58, 70, 88);
+	background-color: rgb(58, 70, 88);
 }
 
 #TopMenu_Top a {
     color: white;
     text-shadow: -2px -2px 0px black;
-		text-decoration: none;
+    text-decoration: none;
 }
 
 #TopOuterTable {
@@ -21,7 +21,7 @@
 }
 
 #TopOuterFillerLeft {
-		width: 20%;
+	width: 30%; /* Change to move menu left or right. */
 }
 
 #TopOuterFillerRight {
@@ -29,12 +29,12 @@
 }
 
 #MenuLogo {
-		width: 100px;
+	width: 100px;
     height: 100px;
 }
 
 #MenuTable {
-		font-family: Arial;
+	font-family: Arial;
 }
 
 #MenuRow {
@@ -42,31 +42,31 @@
 }
 
 .MenuCell {
-		/* background-color: green; */
-		white-space: nowrap;
+	/* background-color: green; */
+	white-space: nowrap;
 }
 
 .MenuCell:hover {
-		/*outline: 5px solid black; */
-		box-shadow: 0 0 0 1px black;
-		border: 1px solid grey;
-		border-radius: 8px 8px;
+	/*outline: 5px solid black; */
+	box-shadow: 0 0 0 1px black;
+	border: 1px solid grey;
+	border-radius: 8px 8px;
 }
 
 .MenuCellClicked {
-		box-shadow: 0 0 0 1px black;
-		border: 1px solid grey;
-		border-radius: 8px 8px;
-		/* background-color: pink; */
-		white-space: nowrap;
+	box-shadow: 0 0 0 1px black;
+	border: 1px solid grey;
+	border-radius: 8px 8px;
+	/* background-color: pink; */
+	white-space: nowrap;
 }
 
 .MenuCellDiv {
-		width: 100px;
-		height: 30px;
-		padding: 10px 15px 0px 15px; /* Top, Right, Bottom, Left */
-		text-align: center;
-		/* background-color: purple; */
+	width: 100px;
+	height: 30px;
+	padding: 10px 15px 0px 15px; /* Top, Right, Bottom, Left */
+	text-align: center;
+	/* background-color: purple; */
 }
 
 #SubMenu {
