--- a/Project/Styles/SubCategories.css
+++ b/Project/Styles/SubCategories.css
@@ -73,3 +73,18 @@
     font-weight: bold;
     color: white;
 }
+
+.CategoryMenuCellEdit 
+{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 50px;
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 20%;
+    background-color: Blue;
+    font-size: 16px;
+    font-weight: bold;
+    color: White;
+}
