--- a/Project/Styles/Home.css
+++ b/Project/Styles/Home.css
@@ -3,7 +3,7 @@ table
 {
     border: 0px;
     margin: 0px;
-	  padding: 0px;
+    padding: 0px;
 }
 
 td
@@ -13,41 +13,35 @@ td
     padding: 0px;
 }
 
-/* NOTE: margin must be specified in the specific cases of h1, h2 etc. to space text rows */
 h1, h2, h3, h4, h5, h6, p
 {
     font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, Sans-Serif;
-    line-height: 0.0;
+}
+
+p
+{
     margin-top: 0px;
-    margin-bottom: 0px;
-    color: white;
-    text-shadow: 1px 1px 2px black; /* Not supported in the CSS 2.1 standard, but will show in most modern browsers. */
+    font-size: 18px;
 }
 
 /* Used for main titles. */
 h1
 {
     font-size: 42px;
-    line-height: 1.8;
-    /*margin-top: 26px;
-    margin-bottom: 26px;*/ /* Margins is an alternative to line-height to change the distance to elements other than text on top or bottom of the text. */
 }
 
 
 /* Used for text on tabs. */
 h3
 {
+    margin-bottom: 0px;
     font-size: 20px;
-    line-height: 1.20;
 }
 
 /* Used for regular text. */
 h6
 {
     font-size: 18px;
-    line-height: 1.3;
-    /*margin-top: 6px;
-    margin-bottom: 6px;*/
 }
 
 #newstable_containertable
