Changed text style AboutUs.css
Changed text style.

--- a/Project/Styles/AboutUs.css
+++ b/Project/Styles/AboutUs.css
@@ -1,5 +1,6 @@
 ﻿body {
     font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, Sans-Serif;
+    font-size: 18px;
 }
 
 #MainContent h1 {
