--- a/Project/Styles/ContactUs.css
+++ b/Project/Styles/ContactUs.css
@@ -1,5 +1,6 @@
 ﻿body {
     font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, Sans-Serif;
+    font-size: 18px;
 }
 
 #MainContent h1 {
